# minly-back

./: .env  Readme.md  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml
data/: postmaster.pid
data/base/1/: 1247_vm  1249  12902_vm  12911  12916  12926  12931  175  2579  2602_vm  2603_vm  2606  2606_vm  2607_vm  2608  2608_vm  2610  2651  2654  2655  2659  2670  2674  2680  2681  2688  2996  3119  3351  3380  3394_vm  3395  3455  3456  3456_vm  3502  3541_vm  3600  3600_vm  3602  (+6 more)
data/base/13066/: 1247  1249_vm  1259  12906  12907  12917  174  2601_vm  2605_vm  2615  2615_vm  2617_vm  2618  2619_vm  2650  2658  2660  2666  2673  2683  2687  2696  2701  2702  2754  2756  2757  2833  2837  2838_vm  2840  3257  3258  3379  3440  3534  3599  3609  3766  6117  (+1 more)
data/base/13067/: 113  1255_vm  1259  1259_vm  12902  12912_vm  12927  12927_vm  2337  2610_vm  2612_vm  2619  2656  2657  2661  2662  2663  2664  2665  2667  2669  2678  2679  2684  2685  2690  2691  2692  2703  2704  2753_vm  2755  2839  2840_vm  2841  3079_vm  (+14 more)
data/global/: 1136_vm  1137  1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  6001  6002  6114  6115  pg_control  pg_internal.init
data/pg_stat_tmp/: db_0.stat  db_13067.stat  db_16384.stat  global.stat
src/: main.py
src/checkers/: checkers.go
src/database/: __init__.py  database.go  database.py  tables.go  tables.py
src/models/: __init__.py  models.py
src/utils/: __init__.py  getRandomString.go  utils.py
(+75 files in other folders)
